# hashcode2019

./: CMakeLists.txt  README.md
src/: FileParser.cpp  FileParser.h  FileWriter.cpp  FileWriter.h  InterestFactorCalculator.cpp  InterestFactorCalculator.h  LineParser.cpp  LineParser.h  Photo.cpp  Photo.h  Slide.cpp  Slide.h  Solver.cpp  Solver.h  TagStorage.cpp  TagStorage.h  main.cpp
src/algorithm/: InterestFactorCalculator.cpp  InterestFactorCalculator.h  Solver.cpp  Solver.h
src/fileHandling/: FileParser.cpp  FileParser.h  FileWriter.cpp  FileWriter.h  LineParser.cpp  LineParser.h
src/objects/: Orientation.h  Slide.cpp  Slide.h
src/storage/: SlideStorage.cpp  SlideStorage.h  TagStorage.cpp  TagStorage.h
